# open-cinema

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  api_tests.http  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  version.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/camilladsp/: default.yml
.github/workflows/: build-camilladsp-arm64.yml  release.yml
api/: admin.py  apps.py  urls.py
api/migrations/: 0001_squashed_0033_audiopipelinenodeposition.py  0001_squashed_0035_alter_knownaudiodevice_nice_name.py
api/models/: __init__.py  audio_device.py  audio_pipeline.py  audio_pipeline_edge.py  audio_pipeline_node.py  camilladsp_filter.py  camilladsp_mixer.py  camilladsp_pipeline.py  known_audio_device.py  preferences.py  preferences_audio_backend.py
api/models/audio/: audio_pipeline.py  known_audio_device.py
api/tasks/: audio_device_discovery.py  audio_pipeline_apply.py  audio_pipeline_job.py  pulseaudio_discovery.py
api/views/: audio_devices.py  audio_pipeline_apply.py  audio_pipeline_edges.py  audio_pipeline_node_relations.py  audio_pipeline_nodes.py  audio_pipeline_validation.py  audio_pipelines.py  audio_pipelines_schematic.py  camilladsp_mixers.py  camilladsp_pipelines.py  camilladsp_status.py  preferences_audio_backend.py  version.py
api/views/audio/: audio_devices.py  device_discovery.py
core/audio/: audio_backend.py  audio_backends.py  audio_device.py  sample_format_enum.py
core/audio/pipeline/: audio_pipeline_graph.py  (+6 more)
core/camilladsp/: __init__.py  camilladsp_audio_pipeline_node.py  camilladsp_audio_pipeline_node_manager.py  client.py  config_builder.py  manager.py
core/plugin_system/: __init__.py  api_plugin.py  oc_plugin.py
core/utils/: graph.py
deployment/: README.md  ansible.cfg
deployment/group_vars/: all.yml
deployment/inventories/: example.yml  local.yml  single-env.yml
deployment/playbooks/: site.yml
opencinema/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
plugin/alsa/: plugin.py
plugin/counter/: __init__.py
plugin/pulseaudio/: plugin.py
(+54 files in other folders)
