[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-cinema"
dynamic = ["version"]
description = "Audio processing control system with CamillaDSP integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Erwan Daniel"},
]
keywords = ["audio", "dsp", "camilladsp", "pulseaudio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=6.0",
    "pulsectl>=24.12.0",
    "PyYAML>=6.0",
    "websocket-client>=1.9.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.11.2",
    "pulsectl>=24.12.0",
    "pyalsaaudio>=0.11.0",
    "camilladsp@git+https://github.com/HEnquist/pycamilladsp.git@v3.0.0",
    "django-enum>=2.3.0",
    "djangorestframework>=3.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/k3rnL/open-cinema"
Documentation = "https://github.com/k3rnL/open-cinema#readme"
Repository = "https://github.com/k3rnL/open-cinema"
Issues = "https://github.com/k3rnL/open-cinema/issues"

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["opencinema*", "api*", "core*", "plugin*", "version"]
exclude = ["tests*", ".venv*", "deployment*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.venv2
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "opencinema.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
